--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import os\n",
     "import requests\n",
     "\n",
-    "API_KEY = \"2oYO3lQwGjIr9RgV+oRa6w==LsM3nPTL7VMFT7m5\""
+    "API_KEY = \"2oYO3lQwGjIr9RgV+oRa6w==LsM3nPTL7VMFT7m5\"\n",
+    "NURT_API_ID = \"73bd8bbc\"\n",
+    "NURT_API_KEY = \"46ff5210638f6e9f5c84ee68eb32033f\""
    ]
   },
   {
@@ -122,6 +124,75 @@
     "for recipe in search_results:\n",
     "    print(recipe[\"_source\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_nutrition(query):\n",
+    "    \"\"\"Fetch recipes from Nutritionix and return JSON response.\"\"\"\n",
+    "    api_url = \"https://trackapi.nutritionix.com/v2/natural/nutrients\"\n",
+    "    headers = {\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'x-app-id': NURT_API_ID,\n",
+    "        'x-app-key': NURT_API_KEY       \n",
+    "    }\n",
+    "    \n",
+    "    response = requests.get(api_url, headers=headers)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}, {response.text}\")\n",
+    "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'common_type': None, 'tag_name': 'apple', 'tag_id': '384', 'food_name': 'apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple', 'tag_id': '384', 'food_name': 'apples', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'appletini', 'tag_id': '5031', 'food_name': 'appletini', 'serving_unit': 'cocktail', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/5031_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'Apple pie', 'tag_id': '15060', 'food_name': 'apple pie', 'serving_unit': 'piece (1/8 of 9\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/1291_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple sauce', 'tag_id': '386', 'food_name': 'applesauce', 'serving_unit': 'container', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/386_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple juice', 'tag_id': '385', 'food_name': 'applejuice', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/385_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'gala apple', 'tag_id': '2049', 'food_name': 'gala apple', 'serving_unit': 'medium', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2049_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'fuji apple', 'tag_id': '2155', 'food_name': 'fuji apple', 'serving_unit': 'medium', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2155_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'green apple', 'tag_id': '8158', 'food_name': 'green apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/8158_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple juice', 'tag_id': '385', 'food_name': 'apple juice', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/385_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple cider', 'tag_id': '213', 'food_name': 'apple cider', 'serving_unit': 'cup', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple sauce', 'tag_id': '386', 'food_name': 'apple sauce', 'serving_unit': 'container', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/386_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple cinnamon oatmeal', 'tag_id': '3500', 'food_name': 'apple oatmeal', 'serving_unit': 'packet', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/3500_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apfelstrudel', 'tag_id': '2190', 'food_name': 'apple strudel', 'serving_unit': 'Piece', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'honeycrisp apple', 'tag_id': '7827', 'food_name': 'honeycrisp apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/7827_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'honeycrisp apple', 'tag_id': '7827', 'food_name': 'honeycrisp apples', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/7827_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'apple cider vinegar', 'tag_id': '479', 'food_name': 'apple cider vinegar', 'serving_unit': 'tbsp', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/479_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'strawberry applesauce', 'tag_id': '8044', 'food_name': 'strawberry applesauce', 'serving_unit': 'container', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'unsweetened applesauce', 'tag_id': '2890', 'food_name': 'unsweetened applesauce', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2890_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
+      "{'common_type': None, 'tag_name': 'unsweetened applesauce', 'tag_id': '2890', 'food_name': 'applesauce unsweetened', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2890_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#results = fetch_nutrition(\"apple\")\n",
+    "for item in results['common']:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
