--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch\n",
     "import os\n",
     "import requests\n",
+    "from requests.utils import quote\n",
+    "import json\n",
     "\n",
     "API_KEY = \"2oYO3lQwGjIr9RgV+oRa6w==LsM3nPTL7VMFT7m5\"\n",
     "NURT_API_ID = \"73bd8bbc\"\n",
@@ -17,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch_nutrition(query):\n",
     "    \"\"\"Fetch recipes from Nutritionix and return JSON response.\"\"\"\n",
-    "    api_url = \"https://trackapi.nutritionix.com/v2/natural/nutrients\"\n",
+    "    # URL encode the query to handle special characters\n",
+    "    encoded_query = quote(query)\n",
+    "    api_url = f\"https://trackapi.nutritionix.com/v2/search/instant/?query={encoded_query}\"\n",
     "    headers = {\n",
     "        'Content-Type': 'application/json',\n",
     "        'x-app-id': NURT_API_ID,\n",
@@ -146,45 +150,46 @@
     "        return response.json()\n",
     "    else:\n",
     "        print(f\"Error: {response.status_code}, {response.text}\")\n",
-    "        return []"
+    "        return []\n",
+    "    \n",
+    "def fetch_nutrition_NL(query):  \n",
+    "    url = 'https://trackapi.nutritionix.com/v2/natural/nutrients'\n",
+    "    headers = {\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'x-app-id': NURT_API_ID,\n",
+    "        'x-app-key': NURT_API_KEY\n",
+    "    }\n",
+    "\n",
+    "    # Set up the body of the request\n",
+    "    body = {\n",
+    "        \"query\": query  \n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(url, headers=headers, data=json.dumps(body))\n",
+    "\n",
+    "    # Check for errors\n",
+    "    if response.status_code == 200:\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}, {response.text}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'common_type': None, 'tag_name': 'apple', 'tag_id': '384', 'food_name': 'apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple', 'tag_id': '384', 'food_name': 'apples', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'appletini', 'tag_id': '5031', 'food_name': 'appletini', 'serving_unit': 'cocktail', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/5031_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'Apple pie', 'tag_id': '15060', 'food_name': 'apple pie', 'serving_unit': 'piece (1/8 of 9\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/1291_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple sauce', 'tag_id': '386', 'food_name': 'applesauce', 'serving_unit': 'container', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/386_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple juice', 'tag_id': '385', 'food_name': 'applejuice', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/385_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'gala apple', 'tag_id': '2049', 'food_name': 'gala apple', 'serving_unit': 'medium', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2049_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'fuji apple', 'tag_id': '2155', 'food_name': 'fuji apple', 'serving_unit': 'medium', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2155_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'green apple', 'tag_id': '8158', 'food_name': 'green apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/8158_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple juice', 'tag_id': '385', 'food_name': 'apple juice', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/385_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple cider', 'tag_id': '213', 'food_name': 'apple cider', 'serving_unit': 'cup', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple sauce', 'tag_id': '386', 'food_name': 'apple sauce', 'serving_unit': 'container', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/386_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple cinnamon oatmeal', 'tag_id': '3500', 'food_name': 'apple oatmeal', 'serving_unit': 'packet', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/3500_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apfelstrudel', 'tag_id': '2190', 'food_name': 'apple strudel', 'serving_unit': 'Piece', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'honeycrisp apple', 'tag_id': '7827', 'food_name': 'honeycrisp apple', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/7827_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'honeycrisp apple', 'tag_id': '7827', 'food_name': 'honeycrisp apples', 'serving_unit': 'medium (3\" dia)', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/7827_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'apple cider vinegar', 'tag_id': '479', 'food_name': 'apple cider vinegar', 'serving_unit': 'tbsp', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/479_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'strawberry applesauce', 'tag_id': '8044', 'food_name': 'strawberry applesauce', 'serving_unit': 'container', 'serving_qty': 1, 'photo': {'thumb': 'https://d2eawub7utcl6.cloudfront.net/images/nix-apple-grey.png', 'highres': None, 'is_user_uploaded': False}, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'unsweetened applesauce', 'tag_id': '2890', 'food_name': 'unsweetened applesauce', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2890_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n",
-      "{'common_type': None, 'tag_name': 'unsweetened applesauce', 'tag_id': '2890', 'food_name': 'applesauce unsweetened', 'serving_unit': 'cup', 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/2890_thumb.jpg'}, 'serving_qty': 1, 'locale': 'en_US'}\n"
+      "[{'food_name': 'apple', 'brand_name': None, 'serving_qty': 1, 'serving_unit': 'medium (3\" dia)', 'serving_weight_grams': 182, 'nf_calories': 94.64, 'nf_total_fat': 0.31, 'nf_saturated_fat': 0.05, 'nf_cholesterol': 0, 'nf_sodium': 1.82, 'nf_total_carbohydrate': 25.13, 'nf_dietary_fiber': 4.37, 'nf_sugars': 18.91, 'nf_protein': 0.47, 'nf_potassium': 194.74, 'nf_p': 20.02, 'full_nutrients': [{'attr_id': 203, 'value': 0.4732}, {'attr_id': 204, 'value': 0.3094}, {'attr_id': 205, 'value': 25.1342}, {'attr_id': 207, 'value': 0.3458}, {'attr_id': 208, 'value': 94.64}, {'attr_id': 209, 'value': 0.091}, {'attr_id': 210, 'value': 3.7674}, {'attr_id': 211, 'value': 4.4226}, {'attr_id': 212, 'value': 10.738}, {'attr_id': 213, 'value': 0}, {'attr_id': 214, 'value': 0}, {'attr_id': 221, 'value': 0}, {'attr_id': 255, 'value': 155.7192}, {'attr_id': 262, 'value': 0}, {'attr_id': 263, 'value': 0}, {'attr_id': 268, 'value': 396.76}, {'attr_id': 269, 'value': 18.9098}, {'attr_id': 287, 'value': 0}, {'attr_id': 291, 'value': 4.368}, {'attr_id': 301, 'value': 10.92}, {'attr_id': 303, 'value': 0.2184}, {'attr_id': 304, 'value': 9.1}, {'attr_id': 305, 'value': 20.02}, {'attr_id': 306, 'value': 194.74}, {'attr_id': 307, 'value': 1.82}, {'attr_id': 309, 'value': 0.0728}, {'attr_id': 312, 'value': 0.0491}, {'attr_id': 313, 'value': 6.006}, {'attr_id': 315, 'value': 0.0637}, {'attr_id': 317, 'value': 0}, {'attr_id': 318, 'value': 98.28}, {'attr_id': 319, 'value': 0}, {'attr_id': 320, 'value': 5.46}, {'attr_id': 321, 'value': 49.14}, {'attr_id': 322, 'value': 0}, {'attr_id': 323, 'value': 0.3276}, {'attr_id': 324, 'value': 0}, {'attr_id': 328, 'value': 0}, {'attr_id': 334, 'value': 20.02}, {'attr_id': 337, 'value': 0}, {'attr_id': 338, 'value': 52.78}, {'attr_id': 341, 'value': 0}, {'attr_id': 342, 'value': 0}, {'attr_id': 343, 'value': 0}, {'attr_id': 401, 'value': 8.372}, {'attr_id': 404, 'value': 0.0309}, {'attr_id': 405, 'value': 0.0473}, {'attr_id': 406, 'value': 0.1656}, {'attr_id': 410, 'value': 0.111}, {'attr_id': 415, 'value': 0.0746}, {'attr_id': 417, 'value': 5.46}, {'attr_id': 418, 'value': 0}, {'attr_id': 421, 'value': 6.188}, {'attr_id': 429, 'value': 0}, {'attr_id': 430, 'value': 4.004}, {'attr_id': 431, 'value': 0}, {'attr_id': 432, 'value': 5.46}, {'attr_id': 435, 'value': 5.46}, {'attr_id': 454, 'value': 0.182}, {'attr_id': 501, 'value': 0.0018}, {'attr_id': 502, 'value': 0.0109}, {'attr_id': 503, 'value': 0.0109}, {'attr_id': 504, 'value': 0.0237}, {'attr_id': 505, 'value': 0.0218}, {'attr_id': 506, 'value': 0.0018}, {'attr_id': 507, 'value': 0.0018}, {'attr_id': 508, 'value': 0.0109}, {'attr_id': 509, 'value': 0.0018}, {'attr_id': 510, 'value': 0.0218}, {'attr_id': 511, 'value': 0.0109}, {'attr_id': 512, 'value': 0.0091}, {'attr_id': 513, 'value': 0.02}, {'attr_id': 514, 'value': 0.1274}, {'attr_id': 515, 'value': 0.0455}, {'attr_id': 516, 'value': 0.0164}, {'attr_id': 517, 'value': 0.0109}, {'attr_id': 518, 'value': 0.0182}, {'attr_id': 601, 'value': 0}, {'attr_id': 605, 'value': 0}, {'attr_id': 606, 'value': 0.051}, {'attr_id': 607, 'value': 0}, {'attr_id': 608, 'value': 0}, {'attr_id': 609, 'value': 0}, {'attr_id': 610, 'value': 0}, {'attr_id': 611, 'value': 0}, {'attr_id': 612, 'value': 0.0018}, {'attr_id': 613, 'value': 0.0437}, {'attr_id': 614, 'value': 0.0055}, {'attr_id': 617, 'value': 0.0127}, {'attr_id': 618, 'value': 0.0783}, {'attr_id': 619, 'value': 0.0164}, {'attr_id': 620, 'value': 0}, {'attr_id': 621, 'value': 0}, {'attr_id': 626, 'value': 0}, {'attr_id': 627, 'value': 0}, {'attr_id': 628, 'value': 0}, {'attr_id': 629, 'value': 0}, {'attr_id': 630, 'value': 0}, {'attr_id': 631, 'value': 0}, {'attr_id': 636, 'value': 21.84}, {'attr_id': 645, 'value': 0.0127}, {'attr_id': 646, 'value': 0.0928}], 'nix_brand_name': None, 'nix_brand_id': None, 'nix_item_name': None, 'nix_item_id': None, 'upc': None, 'consumed_at': '2025-01-30T20:35:15+00:00', 'metadata': {'is_raw_food': False}, 'source': 1, 'ndb_no': 9003, 'tags': {'item': 'apple', 'measure': None, 'quantity': '1.0', 'food_group': 3, 'tag_id': 384}, 'alt_measures': [{'serving_weight': 125, 'measure': 'cup, quartered or chopped', 'seq': 1, 'qty': 1}, {'serving_weight': 109, 'measure': 'cup slices', 'seq': 2, 'qty': 1}, {'serving_weight': 223, 'measure': 'large (3-1/4\" dia)', 'seq': 3, 'qty': 1}, {'serving_weight': 182, 'measure': 'medium (3\" dia)', 'seq': 4, 'qty': 1}, {'serving_weight': 149, 'measure': 'small (2-3/4\" dia)', 'seq': 5, 'qty': 1}, {'serving_weight': 101, 'measure': 'extra small (2-1/2\" dia)', 'seq': 6, 'qty': 1}, {'serving_weight': 242, 'measure': 'NLEA serving', 'seq': 7, 'qty': 1}, {'serving_weight': 28.35, 'measure': 'oz', 'seq': 80, 'qty': 1}, {'serving_weight': 100, 'measure': 'g', 'seq': None, 'qty': 100}], 'lat': None, 'lng': None, 'meal_type': 3, 'photo': {'thumb': 'https://nix-tag-images.s3.amazonaws.com/384_thumb.jpg', 'highres': 'https://nix-tag-images.s3.amazonaws.com/384_highres.jpg', 'is_user_uploaded': False}, 'sub_recipe': None, 'class_code': None, 'brick_code': None, 'tag_id': None}]\n"
      ]
     }
    ],
    "source": [
-    "#results = fetch_nutrition(\"apple\")\n",
-    "for item in results['common']:\n",
-    "    print(item)"
+    "results = fetch_nutrition_NL(\"apple\")\n",
+    "print(results['foods'])"
    ]
   },
   {
