--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -107,16 +107,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"salt\"\n",
-    "recipes = fetch_recipes(query, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -145,19 +135,6 @@
     "\n",
     "for recipe in search_results:\n",
     "    print(recipe[\"_source\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(recipes)\n",
-    "print(len(recipes))\n",
-    "\n",
-    "for recipe in recipes:\n",
-    "    print(recipe['title'])"
    ]
   },
   {
@@ -330,43 +307,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': 'Stracciatella (Italian Wedding Soup)', 'ingredients': '3 1/2 c Chicken broth; homemade|1 lb Fresh spinach; wash/trim/chop|1 Egg|1 c Grated parmesan cheese; --or--|1 c Romano cheese; freshly grated|Salt and pepper; to taste', 'servings': '4 servings', 'instructions': 'Bring 1 cup of the broth to a boil. Add spinach and cook until softened but still bright green. Remove spinach with a slotted spoon and set aside. Add remaining broth to pot. Bring to a boil. Meanwhile, beat egg lightly with a fork. Beat in 1/4 cup of cheese. When broth boils pour in egg mixture, stirring constantly for a few seconds until it cooks into \"rags.\" Add reserved spinach, salt and pepper. Serve immediately, passing remaining cheese. NOTES: Someone asked for this recipe a while back. I believe this soup, known as \"Stracciatella\" is synonymous with Italian Wedding Soup, however, I seem to remember from I-don\\'t-know-where that Italian Wedding Soup is the same as this but with the addition of tiny meatballs.'}\n",
-      "{'calories': 46.2, 'fat_total_g': 1.6, 'fat_saturated_g': 0.1, 'protein_g': 4.8, 'sodium_mg': 2786, 'potassium_mg': 29, 'cholesterol_mg': 15, 'carbohydrates_total_g': 3.4, 'fiber_g': 0.0, 'sugar_g': 3.2}\n",
-      "{'calories': 151.3, 'fat_total_g': 3.4000000000000004, 'fat_saturated_g': 0.4, 'protein_g': 17.9, 'sodium_mg': 3142, 'potassium_mg': 251, 'cholesterol_mg': 15, 'carbohydrates_total_g': 20.099999999999998, 'fiber_g': 9.8, 'sugar_g': 5.2}\n",
-      "{'calories': 224.8, 'fat_total_g': 8.2, 'fat_saturated_g': 2.0, 'protein_g': 24.2, 'sodium_mg': 3211, 'potassium_mg': 350, 'cholesterol_mg': 200, 'carbohydrates_total_g': 20.499999999999996, 'fiber_g': 9.8, 'sugar_g': 5.4}\n",
-      "{'calories': 246.3, 'fat_total_g': 9.6, 'fat_saturated_g': 2.8, 'protein_g': 25.599999999999998, 'sodium_mg': 3302, 'potassium_mg': 381, 'cholesterol_mg': 204, 'carbohydrates_total_g': 21.199999999999996, 'fiber_g': 9.8, 'sugar_g': 5.4}\n",
-      "{'calories': 353.9, 'fat_total_g': 17.2, 'fat_saturated_g': 7.7, 'protein_g': 34.599999999999994, 'sodium_mg': 3704, 'potassium_mg': 599, 'cholesterol_mg': 232, 'carbohydrates_total_g': 22.199999999999996, 'fiber_g': 9.8, 'sugar_g': 5.6000000000000005}\n",
-      "{'Chicken broth; homemade': {'qty': 3.5, 'unit': 'c'}, 'Fresh spinach; wash/trim/chop': {'qty': 1.0, 'unit': 'lb'}, 'Egg': {'qty': 1.0, 'unit': None}, 'Grated parmesan cheese; --or--': {'qty': 1.0, 'unit': 'c'}, 'Romano cheese; freshly grated': {'qty': 1.0, 'unit': 'c'}, 'Salt and pepper; to taste': {'qty': 0, 'unit': 'N/A'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "query =  \"italian wedding soup\"\n",
-    "recipes = fetch_recipes(query)\n",
-    "soup_recipe = recipes[0]\n",
-    "print(soup_recipe)\n",
-    "\n",
-    "ingreds = soup_recipe['ingredients'].split('|')\n",
-    "\n",
-    "ingredients = dict()\n",
-    "total_macro = dict()\n",
-    "\n",
-    "for ing in ingreds:\n",
-    "    name, recipe_info = process_calN_info(ing, total_macro)\n",
-    "    ingredients[name] = recipe_info\n",
-    "\n",
-    "print(ingredients)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
@@ -405,17 +345,7 @@
     "    recipe_json['instructions'] = list(filter(lambda item: len(item) >= 5, recipe['instructions'].split('. ')))\n",
     "    \n",
     "\n",
-    "    return recipe_json\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formatted_json.clear()\n",
-    "recorded_recipes.clear()"
+    "    return recipe_json"
    ]
   },
   {
@@ -647,120 +577,12 @@
     }
    ],
    "source": [
-    "start_idx = 45\n",
+    "start_idx = 147\n",
     "for recipe, i in zip(formatted_json[start_idx:], range(len(formatted_json[start_idx:]))):\n",
     "    name = recipe[\"title\"]\n",
-    "    print(f\"Adding {name}\")\n",
     "    es.index(index='recipe_box', id=start_idx + i, document=recipe)\n",
     "\n",
     "print(start_idx + i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "   \"title\": \"Elegant Chicken in Sour Cream\",\n",
-      "   \"labels\": [\n",
-      "      \"Chicken\"\n",
-      "   ],\n",
-      "   \"rating\": 0,\n",
-      "   \"ingredients\": {\n",
-      "      \"Freeze-Dried Chicken, Or\": {\n",
-      "         \"qty\": 2.0,\n",
-      "         \"unit\": \"oz\"\n",
-      "      },\n",
-      "      \"Chicken-Flavored T.V.P.\": {\n",
-      "         \"qty\": 4.0,\n",
-      "         \"unit\": \"oz\"\n",
-      "      },\n",
-      "      \"Bouillon Cube, Or\": {\n",
-      "         \"qty\": 4.0,\n",
-      "         \"unit\": \"Chicken\"\n",
-      "      },\n",
-      "      \"Chicken Bouillon Granules\": {\n",
-      "         \"qty\": 0.25,\n",
-      "         \"unit\": \"c\"\n",
-      "      },\n",
-      "      \"Pasta, Enriched\": {\n",
-      "         \"qty\": 8.0,\n",
-      "         \"unit\": \"oz\"\n",
-      "      },\n",
-      "      \"Dill Weed\": {\n",
-      "         \"qty\": 1.0,\n",
-      "         \"unit\": \"ts\"\n",
-      "      },\n",
-      "      \"Cream Of Onion Soup Mix\": {\n",
-      "         \"qty\": 1.0,\n",
-      "         \"unit\": \"Env\"\n",
-      "      },\n",
-      "      \"Sour Cream Mix\": {\n",
-      "         \"qty\": 8.0,\n",
-      "         \"unit\": \"oz\"\n",
-      "      },\n",
-      "      \"Sliced Almonds\": {\n",
-      "         \"qty\": 0.5,\n",
-      "         \"unit\": \"c\"\n",
-      "      },\n",
-      "      \"Freeze-Dried Peas\": {\n",
-      "         \"qty\": 2.0,\n",
-      "         \"unit\": \"oz\"\n",
-      "      },\n",
-      "      \"Water\": {\n",
-      "         \"qty\": 8.0,\n",
-      "         \"unit\": \"c\"\n",
-      "      }\n",
-      "   },\n",
-      "   \"macros\": {\n",
-      "      \"calories\": 1928.8000000000002,\n",
-      "      \"fat_total_g\": 128.70000000000002,\n",
-      "      \"fat_saturated_g\": 39.8,\n",
-      "      \"protein_g\": 74.89999999999999,\n",
-      "      \"sodium_mg\": 25655,\n",
-      "      \"potassium_mg\": 1140,\n",
-      "      \"cholesterol_mg\": 232,\n",
-      "      \"carbohydrates_total_g\": 132.29999999999998,\n",
-      "      \"fiber_g\": 19.5,\n",
-      "      \"sugar_g\": 36.39999999999999\n",
-      "   },\n",
-      "   \"instructions\": [\n",
-      "      \"Bring 7 cups of water to boiling, add pasta-chicken package, and simmer for 10 minutes, stirring occasionally\",\n",
-      "      \"Add peas, at the end, for the amount of time recommended on their package\",\n",
-      "      \"Mix soup mix with 1/2 cup of water\",\n",
-      "      \"Pour into pot while stirring, and simmer 5-10 minutes more, or until pasta and chicken are tender\",\n",
-      "      \"Reconstitute sour cream mix with cold water, stir into the pot\",\n",
-      "      \"Serve sprinkled with almonds on top\",\n",
-      "      \"Makes about 8 cups.\"\n",
-      "   ]\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(json.dumps(formatted_json[0], indent=3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3118\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(API_CALLS)"
    ]
   },
   {
