return user id for login

--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch\n",
+    "from elasticsearch.helpers import bulk\n",
     "import os\n",
     "import requests\n",
     "from requests.utils import quote\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -583,6 +584,71 @@
     "    es.index(index='recipe_box', id=start_idx + i, document=recipe)\n",
     "\n",
     "print(start_idx + i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_23960\\3063337098.py:19: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es.indices.put_mapping(index='users', body=map)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, [])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Populate with data, index username for force search, and store password securely\n",
+    "users = [\n",
+    "    {\n",
+    "        \"username\": \"user1\",\n",
+    "        \"password\": \"password1\",\n",
+    "        \"email\": \"user1@example.com\",\n",
+    "        \"first_name\": \"John\",\n",
+    "        \"last_name\": \"Doe\",\n",
+    "        \"user_id\": \"1\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"username\": \"user2\",\n",
+    "        \"password\": \"password2\",\n",
+    "        \"email\": \"user2@example.com\",\n",
+    "        \"first_name\": \"Jane\",\n",
+    "        \"last_name\": \"Doe\",\n",
+    "        \"user_id\": \"2\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "actions = [\n",
+    "    {\n",
+    "        \"_index\": \"users\",\n",
+    "        \"_id\": user[\"user_id\"],\n",
+    "        \"_source\": {\n",
+    "            \"username\": user[\"username\"],\n",
+    "            \"email\": user[\"email\"],\n",
+    "            \"first_name\": user[\"first_name\"],\n",
+    "            \"last_name\": user[\"last_name\"],\n",
+    "            \"password\": user[\"password\"]  # Store password securely\n",
+    "        },\n",
+    "        \"routing\": user[\"username\"]  # Indexing username for force search\n",
+    "    }\n",
+    "    for user in users\n",
+    "]\n",
+    "\n",
+    "# Bulk insert\n",
+    "bulk(es, actions)\n"
    ]
   },
   {
