--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -588,28 +588,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_23960\\3063337098.py:19: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
-      "  es.indices.put_mapping(index='users', body=map)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2, [])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Populate with data, index username for force search, and store password securely\n",
     "users = [\n",
@@ -618,37 +599,67 @@
     "        \"password\": \"password1\",\n",
     "        \"email\": \"user1@example.com\",\n",
     "        \"first_name\": \"John\",\n",
-    "        \"last_name\": \"Doe\",\n",
-    "        \"user_id\": \"1\"\n",
+    "        \"last_name\": \"Doe\"\n",
     "    },\n",
     "    {\n",
     "        \"username\": \"user2\",\n",
     "        \"password\": \"password2\",\n",
     "        \"email\": \"user2@example.com\",\n",
     "        \"first_name\": \"Jane\",\n",
-    "        \"last_name\": \"Doe\",\n",
-    "        \"user_id\": \"2\"\n",
+    "        \"last_name\": \"Doe\"\n",
     "    }\n",
     "]\n",
     "\n",
-    "actions = [\n",
-    "    {\n",
-    "        \"_index\": \"users\",\n",
-    "        \"_id\": user[\"user_id\"],\n",
-    "        \"_source\": {\n",
-    "            \"username\": user[\"username\"],\n",
-    "            \"email\": user[\"email\"],\n",
-    "            \"first_name\": user[\"first_name\"],\n",
-    "            \"last_name\": user[\"last_name\"],\n",
-    "            \"password\": user[\"password\"]  # Store password securely\n",
-    "        },\n",
-    "        \"routing\": user[\"username\"]  # Indexing username for force search\n",
-    "    }\n",
-    "    for user in users\n",
-    "]\n",
+    "for user in users:\n",
+    "    es.index(index='users', id=user[\"email\"], document={\n",
+    "        \"username\": user[\"username\"],\n",
+    "        \"email\": user[\"email\"],\n",
+    "        \"first_name\": user[\"first_name\"],\n",
+    "        \"last_name\": user[\"last_name\"],\n",
+    "        \"password\": user[\"password\"]  # Store password securely\n",
+    "    }, routing=user[\"email\"])  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_32248\\2744648739.py:5: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es.indices.create(index='users', body={\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'users'})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if es.indices.exists(index='users'):\n",
+    "    es.indices.delete(index='users')\n",
     "\n",
-    "# Bulk insert\n",
-    "bulk(es, actions)\n"
+    "# Create a new users index with the specified mapping\n",
+    "es.indices.create(index='users', body={\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"username\": {\"type\": \"text\"},\n",
+    "            \"email\": {\"type\": \"keyword\"},  # Use keyword type for email\n",
+    "            \"first_name\": {\"type\": \"text\"},\n",
+    "            \"last_name\": {\"type\": \"text\"},\n",
+    "            \"password\": {\"type\": \"text\"}  # Consider using a different type for hashed passwords\n",
+    "        }\n",
+    "    }\n",
+    "})"
    ]
   },
   {
